// Jest Snapshot v1, https://jestjs.io/docs/snapshot-testing

exports[`driver.route.guard-cwd.acceptance given: [case1] guard with $route in judge command when: [t0] artifact created but no approval then: stdout has good vibes 1`] = `
"🦉 the way speaks for itself
   ├─ ✓ review.1 - completed [TIME]
   └─ ✗ judge.1 - blocked [TIME]

🗿 route.stone.set
   ├─ stone = 1.vision
   ├─ passage = blocked
   ├─ reason = wait for human approval
   └─ guard
      ├─ artifacts
      │   └─ $route/1.vision*.md
      ├─ reviews
      │   └─ r1: bash -c 'if [ -f "$route/1.vision.md" ]; then echo "blockers: 0"; echo "artifact present at $route"; else echo "blockers: 1"; echo "artifact absent at $route"; fi'
      │       ├─ finished [TIME] ✓
      │       └─ review: .route/1.vision.guard.review.i1.0e5633ef7ed403dccb68d850141f95ee88dfe895fdccb3dc09c1342c38cb97f5.r1.md
      └─ judges
          └─ j1: rhx route.stone.judge --mechanism approved? --stone $stone --route $route
              ├─ finished [TIME] ✗
              └─ reason: wait for human approval
"
`;

exports[`driver.route.guard-cwd.acceptance given: [case1] guard with $route in judge command when: [t1] approval granted and pass reattempted then: stdout has good vibes 1`] = `
"🦉 the way speaks for itself
   ├─ ✓ review.1 - completed (cached)
   └─ ✓ judge.1 - allowed [TIME]

🗿 route.stone.set
   ├─ stone = 1.vision
   ├─ passage = allowed
   ├─ guard
   │  ├─ artifacts
   │  │   └─ $route/1.vision*.md
   │  ├─ reviews
   │  │   └─ r1: bash -c 'if [ -f "$route/1.vision.md" ]; then echo "blockers: 0"; echo "artifact present at $route"; else echo "blockers: 1"; echo "artifact absent at $route"; fi'
   │  │       └─ · cached
   │  │          └─ on $route/1.vision*.md
   │  └─ judges
   │      └─ j1: rhx route.stone.judge --mechanism approved? --stone $stone --route $route
   │          └─ finished [TIME] ✓
   │
   └─ the way continues, run
      └─ rhx route.drive
"
`;

exports[`driver.route.guard-cwd.acceptance given: [case2] guard with $route works from nested route directory when: [t0] judge runs on nested route then: stdout has good vibes 1`] = `
"🦉 the way speaks for itself
   ├─ ✓ review.1 - completed [TIME]
   └─ ✗ judge.1 - blocked [TIME]

🗿 route.stone.set
   ├─ stone = 1.vision
   ├─ passage = blocked
   ├─ reason = wait for human approval
   └─ guard
      ├─ artifacts
      │   └─ $route/1.vision*.md
      ├─ reviews
      │   └─ r1: bash -c 'if [ -f "$route/1.vision.md" ]; then echo "blockers: 0"; echo "artifact present at $route"; else echo "blockers: 1"; echo "artifact absent at $route"; fi'
      │       ├─ finished [TIME] ✓
      │       └─ review: .route/1.vision.guard.review.i1.cf66a6fa1ab9aaeee6c8003c1fc2b5e88eafec45fd48399d39e7847da42f30b7.r1.md
      └─ judges
          └─ j1: rhx route.stone.judge --mechanism approved? --stone $stone --route $route
              ├─ finished [TIME] ✗
              └─ reason: wait for human approval
"
`;

exports[`driver.route.guard-cwd.acceptance given: [case2] guard with $route works from nested route directory when: [t1] approval granted on nested route then: stdout has good vibes 1`] = `
"🦉 the way speaks for itself
   ├─ ✓ review.1 - completed (cached)
   └─ ✓ judge.1 - allowed [TIME]

🗿 route.stone.set
   ├─ stone = 1.vision
   ├─ passage = allowed
   ├─ guard
   │  ├─ artifacts
   │  │   └─ $route/1.vision*.md
   │  ├─ reviews
   │  │   └─ r1: bash -c 'if [ -f "$route/1.vision.md" ]; then echo "blockers: 0"; echo "artifact present at $route"; else echo "blockers: 1"; echo "artifact absent at $route"; fi'
   │  │       └─ · cached
   │  │          └─ on $route/1.vision*.md
   │  └─ judges
   │      └─ j1: rhx route.stone.judge --mechanism approved? --stone $stone --route $route
   │          └─ finished [TIME] ✓
   │
   └─ the way continues, run
      └─ rhx route.drive
"
`;
